# dev-templates

./: README.md  flake.nix
TODO-assembly/: flake.nix
c-cpp/: CMakeLists.txt  flake.nix
cadquery-build123d/: flake.nix
cadquery-build123d/expressions/: build123d.nix  cadquery.nix  clang.nix  cq-docs.nix  cq-editor.nix  cq-warehouse.nix  lib3mf.nix  nlopt.nix  ocpsvg.nix  py-lib3mf.nix  py-overrides.nix  svgpathtools.nix  trianglesolver.nix
cadquery-build123d/expressions/OCP/: default.nix  pybind11-stubgen.nix  stubs.nix
cadquery-build123d/expressions/cq-kit/: default.nix
cadquery-build123d/expressions/opencascade-occt/: default.nix
cadquery-build123d/expressions/pywrap/: default.nix
cadquery-build123d/expressions/spyder/: default.nix
cadquery-build123d/expressions/yacv/: frontend.nix  server.nix
empty/: flake.nix
lisp/: flake.nix
lua/: flake.nix
nix/: flake.nix
node/: flake.nix
openscad/: flake.nix
python/: flake.nix
python-uv/: flake.nix
rust/: flake.nix
rust-toolchain/: flake.nix
scheme/: flake.nix
shell/: flake.nix
typst/: flake.nix
vagrant/: Vagrantfile  apk.sh  apt.sh  dnf.sh  flake.nix  netconf.sh
verilog/: flake.nix
web/: flake.nix
